# gamil-init

./: .gitignore  CMakeLists.txt  README.md
src/: calc_model_grids.F90  calc_model_topo.F90  constants.F90  gamil_init.F90  interp.F90  io_manager.F90  model_bc.F90  model_fc.F90  model_gears.F90  model_grids.F90  model_ic.F90  namelist_mod.F90  source_data.F90  utils.F90  variable.F90
src/pcmdi/: Makefile  README
src/pcmdi/bcgen/: Makefile  driver.f90  namelist  wrap_nf.f90
src/pcmdi/regrid/: Makefile  get_curr_timestamp.f90  regrid.f90
src/test/: test_aero.F90  test_interp.F90  test_model_grids.F90  test_str_utils.F90
tools/: copy_unclarified_data.ncl  create_grid_file.ncl  create_hybrid_for_sigma.ncl  draw_data.ncl  draw_lat_grids.ncl  draw_polar_topo.ncl  fix_hadisst.ncl  plot_grids.ncl  plot_lat_grids.ncl  plot_topo.ncl  show_topo.ncl
